# menu_option_cpp_nhom_12

./: CMakeLists.txt  README.md  anh.qrc  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui
my-server/: menu_option.cpp  registrations.json  server.py
